<resources>
    <string name="app_name">SEEMOO QCom LTE</string>
    <string name="action_settings">Settings</string>
    <string name="tab_status_log">Status log</string>
    <string name="tab_pdcch_dump">PDCCH dump</string>
    <string name="tab_func_counters">Function counters</string>
    <string name="tab_snprintf">snprintf</string>
    <string name="tab_lte_mac">LTE MAC</string>
    <string name="tab_lte_sec">LTE security</string>
    <string name="tab_at_commands">AT commands</string>
    <string name="tab_mem_access">Memory access</string>
    <string name="tab_channel_estimation">Channel estimation</string>
    <string name="packet_receive">got packet from svc: 0x%1$08X, len: %2$d</string>
    <string name="packet_send">sending message to svc: 0x%1$08X, len: %2$d</string>
    <string name="error_msg_read">error reading QMI message:</string>
    <string name="error_msg_qmi_not_present">error: QMI not present</string>
    <string name="error_msg_send">error sending QMI message:</string>
    <string name="qmi_dev_success">SEEMOO QMI kernel driver found</string>
    <string name="qmi_dev_error">error: SEEMOO QMI kernel driver files not found</string>
    <string name="qmi_svc_start">Starting SEEMOO QMI service:</string>
    <string name="snprintf_reg_success">snprintf service registration success</string>
    <string name="snprintf_dereg_success">snprintf service deregistration success</string>
    <string name="ch_est_reg_success">channel estimation service registration success</string>
    <string name="ch_est_dereg_success">channel estimation service deregistration success</string>
    <string name="ltemac_reg_success">LTE MAC service registration success</string>
    <string name="ltemac_dereg_success">LTE MAC service deregistration success</string>
    <string name="lte_sec_reg_success">LTE security service registration success</string>
    <string name="lte_sec_dereg_success">LTE security service deregistration success</string>
    <string name="pdcch_dump_reg_success">PDCCH dump service registration success</string>
    <string name="pdcch_dump_dereg_success">PDCCH dump service deregistration success</string>
    <string name="pdcch_cell_info_reg_success">PDCCH cell info service registration success</string>
    <string name="pdcch_cell_info_dereg_success">PDCCH cell info service deregistration success</string>
    <string name="ltemac_rnti_error">error: unknown RNTI type in LTE MAC service: %1$d</string>
    <string name="activateUdpBoxString">forward frames over UDP</string>
    <string name="destPortString">destination port</string>
    <string name="destIp">destination IP</string>
    <string name="filenameEmpty">Please enter a filename!</string>
    <string name="fileError">error creating file</string>
    <string name="ipPortInvalid">error: destination IP and/or port invalid</string>
    <string name="at_command_executed">AT command executed</string>
    <string name="at_command_dereg_success">AT commands service deregistration success</string>
    <string name="activatePdcchDumpText">dump PDCCH to file</string>
    <string name="destFile">destination file name</string>
    <string name="pdcchGPSText">include GPS location</string>
    <string name="pingCmd">ping command</string>
    <string name="pdcchPingBoxText">run ping (to disable DRX)</string>
    <string name="preference_title">Settings</string>
    <string-array name="log_options">
        <item>errors</item>
        <item>kernel driver messages</item>
        <item>servie starts</item>
        <item>servie registrations</item>
        <item>message receive</item>
        <item>message send</item>
    </string-array>
    <string-array name="log_options_values">
        <item>1</item>
        <item>2</item>
        <item>32</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
    </string-array>
    <string-array name="log_options_default">
        <item>1</item>
        <item>2</item>
        <item>32</item>
        <item>4</item>
    </string-array>
</resources>
