<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentPdcchDump"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activatePdcchDump"
                android:text="@string/activatePdcchDumpText"
                android:checked="false"
                android:layout_weight="0" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/pdcchDestFileName"
                    android:hint="@string/destFile"
                    android:layout_weight="1"
                    android:inputType="textNoSuggestions" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:text="@string/pdcchGPSText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pdcchGpsBox"
                android:layout_weight="0"
                android:checked="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pdcchCellInfo" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
